--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <section id="main_content" class="inner">
         <p>ThunderStrom is a python library to manipulate ElectroStatic Discharges (ESD) mesurement-setups data (like TLP)</p>
 
-<p>ThunderStorm is heavily used by <a href="https://github.com/ESDAnalysisTools/Satellite">Satellite</a></p>
+<p>ThunderStorm is heavily used by <a href="http://esdanalysistools.github.com/Satellite/">Satellite</a></p>
 
 <p>ThunderStorm is under LGPL</p>
       </section>
