Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Thunderstorm : A python library to manipulate ElectroStatic Discharges mesurement TLP data" />
+    <meta name="description" content="Thunderstorm : A python library to manipulate ElectroStatic Discharges mesurement (TLP) data" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/ESDAnalysisTools/ThunderStorm">View on GitHub</a>
 
           <h1 id="project_title">Thunderstorm</h1>
-          <h2 id="project_tagline">A python library to manipulate ElectroStatic Discharges mesurement TLP data</h2>
+          <h2 id="project_tagline">A python library to manipulate ElectroStatic Discharges mesurement (TLP) data</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/ESDAnalysisTools/ThunderStorm/zipball/master">Download this project as a .zip file</a>
